--- a/Sites/Dashboard_new/public/login.html
+++ b/Sites/Dashboard_new/public/login.html
@@ -17,13 +17,14 @@
 
         <div class="right__login">
             <img src="./img/Logo-DotControlTec.png" alt="">
-            <form onsubmit="return entrar()" id="form_login" method="post">
+            <!-- <form onsubmit="return entrar()" id="form_login" method="post"> -->
+            <form id="form_login">
                 <span id="right__span-titulo">Entre com sua conta</span> <br> <br>
                 <input placeholder="nome@example.com" type="email" id="login" name="login" class="right__input">
                 <br>
                 <input placeholder="senha" type="password" id="senha" name="senha" class="right__input"> <br>
 
-                <button type="submit" class="right__button">Entrar</button> <br> <br>
+                <button onclick="entrar()" class="right__button">Entrar</button> <br> <br>
                 <span id="form_login__span-error"></span>
                 <img id="loading" src="./img/gifLoading.gif" style="display: none; margin: 0 auto;">
             </form>
@@ -37,40 +38,41 @@
 <script>
 
     function entrar() {
-        loading.style.display = 'block';
-        var formulario = new URLSearchParams(new FormData(form_login));
-        fetch("/tecnico/autenticar", {
-            method: "POST",
-            body: formulario
-        }).then(response => {
-            if (response.ok) {
-                response.json().then(json => {
-                    loading.style.display = 'none';
-                    sessionStorage.login_usuario_meuapp = json.emailTec;
-                    sessionStorage.nome_usuario_meuapp = json.nomeTecnico;
-                    sessionStorage.nome_escola_meuapp = json.nomeEscola;
-                    sessionStorage.id_usuario_meuapp = json.idTecnico;
-                    if (json.fkGestor == null) {
-                        sessionStorage.gestor = true;
-                    } else {
-                        sessionStorage.gestor = false;
-                    }
+        window.location.href = 'index.html';
+        // loading.style.display = 'block';
+        // var formulario = new URLSearchParams(new FormData(form_login));
+        // fetch("/tecnico/autenticar", {
+        //     method: "POST",
+        //     body: formulario
+        // }).then(response => {
+        //     if (response.ok) {
+        //         response.json().then(json => {
+        //             loading.style.display = 'none';
+        //             sessionStorage.login_usuario_meuapp = json.emailTec;
+        //             sessionStorage.nome_usuario_meuapp = json.nomeTecnico;
+        //             sessionStorage.nome_escola_meuapp = json.nomeEscola;
+        //             sessionStorage.id_usuario_meuapp = json.idTecnico;
+        //             if (json.fkGestor == null) {
+        //                 sessionStorage.gestor = true;
+        //             } else {
+        //                 sessionStorage.gestor = false;
+        //             }
 
-                    sessionStorage.fkEscola = json.fkEscola;
-                    window.location.href = 'index.html';
+        //             sessionStorage.fkEscola = json.fkEscola;
+        //             window.location.href = 'index.html';
 
-                });
+        //         });
 
-            } else {
-                loading.style.display = 'none';
-                response.text().then(texto => {
-                    document.getElementById('form_login__span-error').innerHTML = texto;
-                    document.getElementById('form_login__span-error').style.color = 'red';
-                });
-            }
-        });
+        //     } else {
+        //         loading.style.display = 'none';
+        //         response.text().then(texto => {
+        //             document.getElementById('form_login__span-error').innerHTML = texto;
+        //             document.getElementById('form_login__span-error').style.color = 'red';
+        //         });
+        //     }
+        // });
 
-        return false;
+        // return false;
     }
 
 </script>
