Adicionando alterações do site do commit anterior

--- a/Sites/Dashboard_new/public/Monitoramento/visaoGlobal.html
+++ b/Sites/Dashboard_new/public/Monitoramento/visaoGlobal.html
@@ -132,30 +132,25 @@
         fetch(`/alerta/recuperar/alertas/${sessionStorage.fkEscola}`, {
             method: "GET"
         }).then(response => {
-
             if (response.ok) {
                 response.json().then(json => {
                     let statusMaquina;
                     let txtStatus;
-                    jsonSimulado = {
-                        nomeComputador: "PC-021",
-                        descricaoAlerta: "CPU sobre aquecida",
-                        dataHora: "05-03-2020T.10:12:20",
-                    }
-                    for (let i = 0; i < jsonSimulado.length; i++) {
-                        if (jsonSimulado[i].tipoAlerta == 'PERIGO') {
-                            txtStatus = `<td style="color: red; font-weight: bold;">${jsonSimulado[i].tipoAlerta}</td>`;
+                    console.log(json)
+                    for (let i = 0; i < json.length; i++) {
+                        if (json[i].tipoAlerta == 2) {
+                            txtStatus = `<td style="color: red; font-weight: bold;">${json[i].tituloAlerta}</td>`;
                             statusMaquina = '<i style="color: red; font-size: 30px" class="fas fa-exclamation-triangle"></i>'
                         } else {
-                            txtStatus = `<td style="color: #ffbc00; font-weight: bold;">${jsonSimulado[i].tipoAlerta}</td>`;
+                            txtStatus = `<td style="color: #ffbc00; font-weight: bold;">${json[i].tituloAlerta}</td>`;
                             statusMaquina = '<i style="color: #ffbc00; font-size: 30px" class="fas fa-exclamation-triangle"></i>'
                         }
                         alertas_maquinas.innerHTML += `
                             <tr>
                                 <td>${statusMaquina}</td>
-                                <td>${alteraData(jsonSimulado[i].dataHora) + alteraHora(jsonSimulado[i].dataHora)}</td>
+                                <td>${alteraData(json[i].dataHora) + alteraHora(json[i].dataHora)}</td>
                                 ${txtStatus}
-                                <td>${jsonSimulado[i].nomeComputador}</td>
+                                <td>${json[i].nomeComputador}</td>
                                 <td>${json[i].descricaoAlerta}</td>
                             </tr>
                         `;
@@ -205,6 +200,9 @@
             }
         });
     }
+    
+    atualizaGraficos();
+    atualizaTabelaStatus();
     getTecnicos();
     addAlerts();
 </script>
