--- a/Sites/Dashboard_new/public/login.html
+++ b/Sites/Dashboard_new/public/login.html
@@ -38,41 +38,41 @@
 <script>
 
     function entrar() {
-        window.location.href = 'index.html';
-        // loading.style.display = 'block';
-        // var formulario = new URLSearchParams(new FormData(form_login));
-        // fetch("/tecnico/autenticar", {
-        //     method: "POST",
-        //     body: formulario
-        // }).then(response => {
-        //     if (response.ok) {
-        //         response.json().then(json => {
-        //             loading.style.display = 'none';
-        //             sessionStorage.login_usuario_meuapp = json.emailTec;
-        //             sessionStorage.nome_usuario_meuapp = json.nomeTecnico;
-        //             sessionStorage.nome_escola_meuapp = json.nomeEscola;
-        //             sessionStorage.id_usuario_meuapp = json.idTecnico;
-        //             if (json.fkGestor == null) {
-        //                 sessionStorage.gestor = true;
-        //             } else {
-        //                 sessionStorage.gestor = false;
-        //             }
+        loading.style.display = 'block';
+        var formulario = new URLSearchParams(new FormData(form_login));
+        fetch("/tecnico/autenticar", {
+            method: "POST",
+            body: formulario
+        }).then(response => {
+            if (response.ok) {
+                response.json().then(json => {
+                    loading.style.display = 'none';
+                    sessionStorage.login_usuario_meuapp = json.emailTec;
+                    sessionStorage.nome_usuario_meuapp = json.nomeTecnico;
+                    sessionStorage.nome_escola_meuapp = json.nomeEscola;
+                    sessionStorage.id_usuario_meuapp = json.idTecnico;
+                    if (json.fkGestor == null) {
+                        sessionStorage.gestor = true;
+                    } else {
+                        sessionStorage.gestor = false;
+                    }
 
-        //             sessionStorage.fkEscola = json.fkEscola;
-        //             window.location.href = 'index.html';
+                    sessionStorage.fkEscola = json.fkEscola;
+                    window.location.href = 'index.html';
 
-        //         });
+                });
 
-        //     } else {
-        //         loading.style.display = 'none';
-        //         response.text().then(texto => {
-        //             document.getElementById('form_login__span-error').innerHTML = texto;
-        //             document.getElementById('form_login__span-error').style.color = 'red';
-        //         });
-        //     }
-        // });
+            } else {
+                loading.style.display = 'none';
+                response.text().then(texto => {
+                    cosole.log(response)
+                    document.getElementById('form_login__span-error').innerHTML = texto;
+                    document.getElementById('form_login__span-error').style.color = 'red';
+                });
+            }
+        });
 
-        // return false;
+        return false;
     }
 
 </script>
